fix up spacing around main list

--- a/public/css/default.less
+++ b/public/css/default.less
@@ -221,7 +221,7 @@ body {
 }
 
 .list-group {
-    margin-top:20px;
+    margin:10px;
 
     .list-group-item {
         line-height:15px;
